Coverity analysis defect 134308: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2023-02-06
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/query/sbe_stage_builder_expression.cpp:79: UNINIT_CTOR 134308 Class member declaration for "frameId".
      /src/mongo/db/query/sbe_stage_builder_expression.cpp:67: UNINIT_CTOR 134308 Non-static class member "frameId" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/query/sbe_stage_builder_expression.cpp:83: UNINIT_CTOR 134308 Class member declaration for "nextSlotId".
      /src/mongo/db/query/sbe_stage_builder_expression.cpp:67: UNINIT_CTOR 134308 Non-static class member "nextSlotId" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Steve Tarzia
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: