SERVER-71942 Initialize ids in ExpressionVisitorContext